# fastapi_auth_starter

./: .env.example  .gitignore  DEV.md  PACKAGING.md  PUBLISHING.md  README.md  publish.sh  pyproject.toml  sync_to_template.py
.github/workflows/: publish.yml
alembic/: env.py
alembic/versions/: 279c472f4fd8_add_user_table.py  5f062b3648fa_change_user_id_from_uuid_to_string_for_.py
app/: main.py
app/api/v1/: api.py
app/api/v1/routes/: auth.py  user.py
app/api/v1/schemas/: auth.py  task.py  user.py
app/core/: config.py  database.py  dependencies.py
app/models/: __init__.py  task.py
app/services/: auth.py  task.py  user.py
fastapi_auth_starter/: __init__.py  cli.py
fastapi_auth_starter/templates/: .env.example  pyproject.toml
fastapi_auth_starter/templates/alembic/: env.py
fastapi_auth_starter/templates/alembic/versions/: 8d275132562b_create_tasks_table.py
